--- a/MeasureUUUP/src/main/res/layout/activity_leng.xml
+++ b/MeasureUUUP/src/main/res/layout/activity_leng.xml
@@ -26,7 +26,8 @@
         <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/length_radio_group">
+                android:id="@+id/length_radio_group"
+                android:layout_column="0">
             <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -68,5 +69,15 @@
                     android:text="@string/kilometers_rad"
                     android:id="@+id/kilometers_radio"/>
         </RadioGroup>
+    </TableRow>
+    <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/compute_conv"
+                android:id="@+id/compute_button"
+                android:layout_column="0"/>
     </TableRow>
 </TableLayout>
