--- a/MeasureUUUP/src/main/res/layout/activity_data.xml
+++ b/MeasureUUUP/src/main/res/layout/activity_data.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,7 +6,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".DataActivity">
+    tools:context=".DataActivity"
+    android:orientation="vertical">
 
 
     <EditText
@@ -17,78 +18,83 @@
             android:id="@+id/input_num"
             android:hint="@string/input_num"
             />
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/data_display"
-            android:layout_below="@+id/input_num"
-            android:layout_toRightOf="@+id/data_radio_group"/>
 
-    <RadioGroup
+    <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://scemas.android.com/tools"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/data_radio_group"
-            android:layout_below="@+id/input_num"
-            android:layout_alignLeft="@+id/input_num">
-        <RadioButton
+            android:orientation="horizontal">
+        <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/bits_rad"
-                android:id="@+id/bits_radio"/>
-        <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/kilobits_rad"
-                android:id="@+id/kilobits_radio"/>
-        <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/megabits_rad"
-                android:id="@+id/megabits_radio"/>
-        <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/gigabits_rad"
-                android:id="@+id/gigabits_radio"/>
-        <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/terabits_rad"
-                android:id="@+id/terabits_radio"/>
-        <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/bytes_rad"
-                android:id="@+id/bytes_radio"/>
-        <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/kilobytes_rad"
-                android:id="@+id/kilobytes_radio"/>
-        <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/megabytes_rad"
-                android:id="@+id/megabytes_radio"/>
-        <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/gigabytes_rad"
-                android:id="@+id/gigabytes_radio"/>
-        <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/terabytes_rad"
-                android:id="@+id/terabytes_radio"/>
-    </RadioGroup>
+                android:id="@+id/data_radio_group"
+                android:layout_alignLeft="@+id/input_num">
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/bits_rad"
+                    android:id="@+id/bits_radio"/>
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/kilobits_rad"
+                    android:id="@+id/kilobits_radio"/>
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/megabits_rad"
+                    android:id="@+id/megabits_radio"/>
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/gigabits_rad"
+                    android:id="@+id/gigabits_radio"/>
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/terabits_rad"
+                    android:id="@+id/terabits_radio"/>
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/bytes_rad"
+                    android:id="@+id/bytes_radio"/>
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/kilobytes_rad"
+                    android:id="@+id/kilobytes_radio"/>
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/megabytes_rad"
+                    android:id="@+id/megabytes_radio"/>
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/gigabytes_rad"
+                    android:id="@+id/gigabytes_radio"/>
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/terabytes_rad"
+                    android:id="@+id/terabytes_radio"/>
+        </RadioGroup>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/data_display"/>
+
+    </LinearLayout>
 
     <Button
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="@string/compute_conv"
             android:id="@+id/compute_button"
-            android:onClick="computeClicked"
-            android:layout_below="@+id/data_radio_group"
-            android:layout_alignRight="@+id/data_radio_group"/>
+            android:onClick="computeClicked"/>
 
-</RelativeLayout>
+
+</LinearLayout>
