--- a/MeasureUUUP/src/main/res/layout/activity_main.xml
+++ b/MeasureUUUP/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,80 +7,45 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-    <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
         <Button
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:text="@string/length_but"
                 android:id="@+id/length_button"
                 android:onClick="runLength"/>
-    </TableRow>
-    <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
         <Button
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:text="@string/volume_but"
                 android:id="@+id/volume_button"
                 android:onClick="runVolume"/>
-    </TableRow>
-    <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
         <Button
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:text="@string/temp_but"
                 android:id="@+id/temp_button"
                 android:onClick="runTemp"/>
-    </TableRow>
-    <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
        <Button
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:text="@string/mass_but"
                 android:id="@+id/mass_button"
                 android:onClick="runMass"/>
-    </TableRow>
-       <!-- <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/currency_but"
-                android:id="@+id/currency_button"
-                android:onClick="runCurrency"/>-->
-    <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
         <Button
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:text="@string/data_but"
                 android:id="@+id/data_button"
                 android:onClick="runData"/>
-    </TableRow>
-    <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
         <Button
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:text="@string/tip_but"
                 android:id="@+id/tip_button"
                 android:onClick="runTip"/>
-    </TableRow>
 
         <!--<TextView
             android:layout_width="wrap_content"
@@ -90,4 +55,4 @@
             android:id="@+id/test_textview"/>-->
 
 
-</TableLayout>
+</LinearLayout>
