--- a/MeasureUUUP/src/main/res/layout/activity_volume.xml
+++ b/MeasureUUUP/src/main/res/layout/activity_volume.xml
@@ -1,4 +1,4 @@
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,11 +6,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context=".VolumeActivity">
 
-    <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
         <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -19,15 +17,18 @@
                 android:id="@+id/length_num"
                 android:layout_column="0"
                 android:hint="@string/input_num"/>
-    </TableRow>
-    <TableRow
+
+    <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://scemas.android.com/tools"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
         <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/volume_radio_group"
-                android:layout_column="0">
+                android:id="@+id/volume_radio_group">
             <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -64,16 +65,18 @@
                     android:text="@string/liters_rad"
                     android:id="@+id/liters_radio"/>
         </RadioGroup>
-    </TableRow>
-    <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        <Button
+
+        <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/compute_conv"
-                android:id="@+id/compute_button"
-                android:layout_column="0"/>
-    </TableRow>
+                android:id="@+id/volume_display"/>
 
-</TableLayout>
+    </LinearLayout>
+
+        <Button
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:text="@string/compute_conv"
+                android:id="@+id/compute_button"/>
+
+</LinearLayout>
