--- a/MeasureUUUP/src/main/res/layout/activity_main.xml
+++ b/MeasureUUUP/src/main/res/layout/activity_main.xml
@@ -1,58 +1,32 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity"
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-        <Button
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/length_but"
-                android:id="@+id/length_button"
-                android:onClick="runLength"/>
-        <Button
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/volume_but"
-                android:id="@+id/volume_button"
-                android:onClick="runVolume"/>
-        <Button
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/temp_but"
-                android:id="@+id/temp_button"
-                android:onClick="runTemp"/>
-       <Button
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/mass_but"
-                android:id="@+id/mass_button"
-                android:onClick="runMass"/>
-        <Button
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/data_but"
-                android:id="@+id/data_button"
-                android:onClick="runData"/>
-        <Button
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/tip_but"
-                android:id="@+id/tip_button"
-                android:onClick="runTip"/>
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <!--<TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/hello_world"
-            android:gravity="center_horizontal"
-            android:id="@+id/test_textview"/>-->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/main_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?android:actionBarSize"
+                android:background="@color/colorPrimary"/>
 
-</LinearLayout>
+        </FrameLayout>
+
+        <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:menu="@menu/drawer_menu"/>
+
+    </android.support.v4.widget.DrawerLayout>
+</android.support.design.widget.CoordinatorLayout>
